// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Klachten /> Matches the Full Page snapshot when API gives no result 1`] = `
<DocumentFragment>
  <main
    class="Page OverviewPage Klachten"
  >
    <header
      class="PageHeading hasIcon hasBackLink"
    >
      <span
        aria-hidden="true"
        class="Icon"
      >
        <svg
          aria-label="Klachten"
          class="ChapterIcon"
          fill="black"
        >
          IconKlachten.svg
        </svg>
      </span>
      <div
        class="HeadingInner"
      >
        <a
          class="Button Button__plain Button__lean Linkd BackLink"
          href="/"
        >
          <svg
            aria-hidden="true"
            class="Icon Icon__left"
            fill="#000"
            height="14px"
            width="14px"
          >
            Chevron-Left.svg
          </svg>
          Home
        </a>
        <h2
          class="Heading Heading__large"
        >
          Klachten
        </h2>
      </div>
    </header>
    <div
      class="PageContent"
    >
      <p>
        Hier ziet u een overzicht van de klachten die u hebt ingediend bij gemeente Amsterdam.
      </p>
      <p>
        <a
          class="Button Button__plain Button__lean Linkd"
          href="https://www.amsterdam.nl/veelgevraagd/?productid=%7B249D3A8E-ED07-4E4C-BFAD-49F174342FD5%7D"
          rel="external noopener noreferrer"
        >
          <svg
            aria-hidden="true"
            class="Icon Icon__left"
            fill="#000"
            height="14px"
            width="14px"
          >
            Chevron-Right.svg
          </svg>
          Meer informatie over het indienen van klachten
        </a>
      </p>
      <div
        class="Alert warning"
      >
        <svg
          aria-hidden="true"
          class="Icon"
        >
          Alert.svg
        </svg>
         
        <p>
          We kunnen op dit moment geen klachten tonen.
        </p>
      </div>
    </div>
    <section
      class="SectionCollapsible SectionCollapsibleFirst"
    >
      <h3
        class="Heading Heading__mediumLarge Title TitleWithItems"
      >
        <button
          aria-expanded="true"
          class="TitleToggle"
        >
          <svg
            aria-hidden="true"
            class="CaretIcon"
          >
            Chevron-Right.svg
          </svg>
           Ingediende klachten
        </button>
      </h3>
      <div
        aria-hidden="false"
        class="Panel"
        style="height: 0px;"
      >
        <div
          class="PanelInner"
        >
          <p
            class="NoItemsMessage"
          >
            U heeft nog geen klachten ingediend.
          </p>
        </div>
      </div>
    </section>
  </main>
</DocumentFragment>
`;

exports[`<Klachten /> Matches the Full Page snapshot when there are complaints 1`] = `
<DocumentFragment>
  <main
    class="Page OverviewPage Klachten"
  >
    <header
      class="PageHeading hasIcon hasBackLink"
    >
      <span
        aria-hidden="true"
        class="Icon"
      >
        <svg
          aria-label="Klachten"
          class="ChapterIcon"
          fill="black"
        >
          IconKlachten.svg
        </svg>
      </span>
      <div
        class="HeadingInner"
      >
        <a
          class="Button Button__plain Button__lean Linkd BackLink"
          href="/"
        >
          <svg
            aria-hidden="true"
            class="Icon Icon__left"
            fill="#000"
            height="14px"
            width="14px"
          >
            Chevron-Left.svg
          </svg>
          Home
        </a>
        <h2
          class="Heading Heading__large"
        >
          Klachten
        </h2>
      </div>
    </header>
    <div
      class="PageContent"
    >
      <p>
        Hier ziet u een overzicht van de klachten die u hebt ingediend bij gemeente Amsterdam.
      </p>
      <p>
        <a
          class="Button Button__plain Button__lean Linkd"
          href="https://www.amsterdam.nl/veelgevraagd/?productid=%7B249D3A8E-ED07-4E4C-BFAD-49F174342FD5%7D"
          rel="external noopener noreferrer"
        >
          <svg
            aria-hidden="true"
            class="Icon Icon__left"
            fill="#000"
            height="14px"
            width="14px"
          >
            Chevron-Right.svg
          </svg>
          Meer informatie over het indienen van klachten
        </a>
      </p>
    </div>
    <section
      class="SectionCollapsible SectionCollapsibleFirst"
    >
      <h3
        class="Heading Heading__mediumLarge Title TitleWithItems"
      >
        <button
          aria-expanded="true"
          class="TitleToggle"
        >
          <svg
            aria-hidden="true"
            class="CaretIcon"
          >
            Chevron-Right.svg
          </svg>
           Ingediende klachten
        </button>
      </h3>
      <div
        aria-hidden="false"
        class="Panel"
        style="height: 0px;"
      >
        <div
          class="PanelInner"
        >
          <table
            class="Table"
          >
            <thead>
              <tr
                class="TableRow"
              >
                <th
                  class="DisplayProp"
                >
                  Zaaknummer
                </th>
                <th
                  class="DisplayProp"
                >
                  Ontvangen op
                </th>
                <th
                  class="DisplayProp"
                >
                  Onderwerp
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                class="TableRow"
              >
                <td
                  class="DisplayProp"
                >
                  <span
                    class="DisplayPropLabel"
                  >
                    Zaaknummer:
                  </span>
                  <a
                    class="Button Button__plain Button__lean Linkd"
                    href="/klachten/klacht/36049"
                  >
                    <svg
                      aria-hidden="true"
                      class="Icon Icon__left"
                      fill="#000"
                      height="14px"
                      width="14px"
                    >
                      Chevron-Right.svg
                    </svg>
                    36049
                  </a>
                </td>
                <td
                  class="DisplayProp"
                >
                  <span
                    class="DisplayPropLabel"
                  >
                    Ontvangen op:
                  </span>
                  <span>
                    30 mei 2022
                  </span>
                </td>
                <td
                  class="DisplayProp"
                >
                  <span
                    class="DisplayPropLabel"
                  >
                    Onderwerp:
                  </span>
                  <span>
                    Test voor decentrale toewijzing
                  </span>
                </td>
              </tr>
              <tr
                class="TableRow"
              >
                <td
                  class="DisplayProp"
                >
                  <span
                    class="DisplayPropLabel"
                  >
                    Zaaknummer:
                  </span>
                  <a
                    class="Button Button__plain Button__lean Linkd"
                    href="/klachten/klacht/36046"
                  >
                    <svg
                      aria-hidden="true"
                      class="Icon Icon__left"
                      fill="#000"
                      height="14px"
                      width="14px"
                    >
                      Chevron-Right.svg
                    </svg>
                    36046
                  </a>
                </td>
                <td
                  class="DisplayProp"
                >
                  <span
                    class="DisplayPropLabel"
                  >
                    Ontvangen op:
                  </span>
                  <span>
                    05 mei 2022
                  </span>
                </td>
                <td
                  class="DisplayProp"
                >
                  <span
                    class="DisplayPropLabel"
                  >
                    Onderwerp:
                  </span>
                  <span>
                     
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </section>
  </main>
</DocumentFragment>
`;

exports[`<Klachten /> Matches the Full Page snapshot when there are no complaints 1`] = `
<DocumentFragment>
  <main
    class="Page OverviewPage Klachten"
  >
    <header
      class="PageHeading hasIcon hasBackLink"
    >
      <span
        aria-hidden="true"
        class="Icon"
      >
        <svg
          aria-label="Klachten"
          class="ChapterIcon"
          fill="black"
        >
          IconKlachten.svg
        </svg>
      </span>
      <div
        class="HeadingInner"
      >
        <a
          class="Button Button__plain Button__lean Linkd BackLink"
          href="/"
        >
          <svg
            aria-hidden="true"
            class="Icon Icon__left"
            fill="#000"
            height="14px"
            width="14px"
          >
            Chevron-Left.svg
          </svg>
          Home
        </a>
        <h2
          class="Heading Heading__large"
        >
          Klachten
        </h2>
      </div>
    </header>
    <div
      class="PageContent"
    >
      <p>
        Hier ziet u een overzicht van de klachten die u hebt ingediend bij gemeente Amsterdam.
      </p>
      <p>
        <a
          class="Button Button__plain Button__lean Linkd"
          href="https://www.amsterdam.nl/veelgevraagd/?productid=%7B249D3A8E-ED07-4E4C-BFAD-49F174342FD5%7D"
          rel="external noopener noreferrer"
        >
          <svg
            aria-hidden="true"
            class="Icon Icon__left"
            fill="#000"
            height="14px"
            width="14px"
          >
            Chevron-Right.svg
          </svg>
          Meer informatie over het indienen van klachten
        </a>
      </p>
    </div>
    <section
      class="SectionCollapsible SectionCollapsibleFirst"
    >
      <h3
        class="Heading Heading__mediumLarge Title TitleWithItems"
      >
        <button
          aria-expanded="true"
          class="TitleToggle"
        >
          <svg
            aria-hidden="true"
            class="CaretIcon"
          >
            Chevron-Right.svg
          </svg>
           Ingediende klachten
        </button>
      </h3>
      <div
        aria-hidden="false"
        class="Panel"
        style="height: 0px;"
      >
        <div
          class="PanelInner"
        >
          <p
            class="NoItemsMessage"
          >
            U heeft nog geen klachten ingediend.
          </p>
        </div>
      </div>
    </section>
  </main>
</DocumentFragment>
`;
